2014-08-24  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: locator_mode is not checked if button == 0.

2014-08-23  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_imagelib.c: Sixel graphics without any modifiers is processed in
	  mlterm instead of calling mlimgloader.

	* gdk-pixbuf.c: Compiling error with gdk-pixbuf-1.x is fixed.

	* x_screen.c, MLTermPty.c: ml_term_report_mouse_tracking() is used.

	* ml_term.h: ml_term_report_mouse_tracking() is added.

	* ml_vt100_parser.[ch]:
	  - DEC Locator is partially supported.
	  - ml_vt100_parser_report_mouse_tracking() is added.

	* version.h.in: 3.3.7 -> 3.3.7post

2014-08-16  Araki Ken  <arakiken@users.sf.net>

	* 3.3.8 released.
	  (tag "rel-3_3_8")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.8.

	* etc/main, etc/main.ja: Updated.

2014-08-16  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch]: Compiling error if mlterm is built without
	  --enable-ssh2 is fixed.

	* ml_pty_ssh.c: Hack for cygwin SIGCHLD is added.

	* win32/mlterm-msys_cygwin.bat, mlterm-win32.bat,
	  mlterm-xcygwin.bat, setup-cygwin.bat: Removed.

2014-08-12  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja: Updated.

	* xlib/x_dnd.c, x_screen.c: DnD without Shift doesn't start scp.

	* fb/x_imagelib.c, win32/x_imagelib.c: Sixel parser is embeded instead of
	  using mlimgloader.

2014-08-09  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.ja, man/mlterm.1: Updated.

	* x_screen.c: "scp" is executed in set_xdnd_config() if a local file is
	  dropped on ssh client window.

	* xlib/x_dnd.c: "text/uri-list" triggers set_xdnd_config("scp").

	* win32/x_dnd.c: Shift+DnD triggers set_xdnd_config("scp").

	* ml_term.h: ml_term_exec_cmd() and ml_term_scp() are added.

	* ml_vt100_parser.[ch]: ml_vt100_parser_exec_cmd() is added.

	* libptyssh/ml_pty_ssh.c, ml_pty_ssh.c:
	  - read/write on ssh session is blocked while scp thread is working.