@@ -133,8 +133,8 @@ typedef struct  x_screen
 
 	int16_t  prev_inline_pic ;
 
-	int16_t  prev_mouse_report_col ;
-	int16_t  prev_mouse_report_row ;
+	u_int16_t  prev_mouse_report_col ;
+	u_int16_t  prev_mouse_report_row ;
 
 	u_int8_t  fade_ratio ;
 	u_int8_t  line_space ;
